--- a/Client/partials/addevent.html
+++ b/Client/partials/addevent.html
@@ -84,13 +84,15 @@
         <label>Categoria</label>
         <select class="c-select" ng-model="event.category_name" required>
           <option ng-repeat="category in categories" value="{{category.name}}">{{category.name}}</option>
+
         </select>
+        <div style="width:50px; height: 50px; background-color:{{category.colour}}"></div>
       </fieldset>
       <fieldset class="col-md-12 clearfix">
       </fieldset>
 
       <div class="col-md-12 clearfix">
-        <button class="btn btn-primary" ng-click="toggleCustom()">Invita</button>
+        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">Invita</button>
         <button type="button" ng-disabled="" ng-click="createPlace()" class="btn btn-primary">Crea evento</button>
       </div>
 
@@ -98,44 +100,59 @@
   </div>
 
 </div>
-<div class="col-md-12 overlay" ng-hide="custom">
-  <div class="col-md-6 overlay-box">
-    <fieldset>
-      <label >Aggiungi membri</label>
-      <div>
-        <div class="input-group">
-          <input type="text" class="form-control" placeholder="Search for..." ng-model="searchUser">
-          <span class="input-group-btn">
-            <button class="btn btn-default" type="button">Cerca</button>
-          </span>
-        </div>
-        <div class="search-results">
-          <ul class="list-group">
-            <li class="list-group-item" ng-repeat="result in results" ng-click="pushToarray(result.id)">
-              <div class="row">
-                  <img class="img-responsive img-circle" style="width:50px;display:inline-block;margin: 0 10px;" ng-src="{{result.image_profile}}">
-                  <h3 style="display: inline-block; margin: 0 10px;">{{result.name}} {{result.lastname}}</h3>
-              </div>
-            </li>
-          </ul>
-        </div>
 
-        <h4>ID delle Persone che hai invitato</h4>
-        <div class="invited-list" >
-            <span ng-repeat="partecipant in partecipantList">
-              <b>{{partecipant}}</b>,
-            </span>
-        </div>
+
+<!-- Modal -->
+<div id="myModal" class="modal fade" role="dialog">
+  <div class="modal-dialog">
+
+    <!-- Modal content-->
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" ng-click="clearArray()">&times;</button>
+        <h4 class="modal-title">Aggiungi membri</h4>
       </div>
+      <div class="modal-body">
+        <fieldset>
+          <label >Aggiungi membri</label>
+          <div>
+            <div class="input-group">
+              <input type="text" class="form-control" placeholder="Search for..." ng-model="searchUser">
+              <span class="input-group-btn">
+                <button class="btn btn-default" type="button">Cerca</button>
+              </span>
+            </div>
+            <div class="search-results">
+              <ul class="list-group">
+                <li class="list-group-item" ng-repeat="result in results" ng-click="pushToarray(result)">
+                  <div class="row">
+                      <img class="img-responsive img-circle" style="width:30px;display:inline-block;margin: 0 10px;" ng-src="{{result.image_profile}}">
+                      <p style="display: inline-block; margin: 0 10px;"><b>{{result.name}} {{result.lastname}}</b></p>
+                  </div>
+                </li>
+              </ul>
+            </div>
 
-    </fieldset>
-<!--
-<h4>Persone che hai invitato</h4>
-<div class="invited-list">
-  nessuno
-</div>-->
-<button class="btn btn-warning" ng-click="toggleCustom(); addPartecipant(1)">CHIUDI</button>
-</div>
+            <h4>Persone invitate</h4>
+            <div class="invited-list" >
+                <span ng-repeat="partecipant in partecipantList">
+                  <span style="display:inline-block;text-align: center;">
+                    <img class="img-responsive img-circle" style="width:50px;display:block;margin: 0 10px;" ng-src="{{partecipant.image_profile}}">
+                    <b>{{partecipant.name}}</b><br />
+                    <b>{{partecipant.lastname}}</b>
+                  </span>
+
+                </span>
+            </div>
+          </div>
+        </fieldset>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+
+  </div>
 </div>
 
 </div>
