--- a/Client/partials/event.html
+++ b/Client/partials/event.html
@@ -8,7 +8,19 @@
       </div>
 
       <div class="col-md-6">
-        <h2 class="page-header">{{evento.event_name}}</h2>
+        <h2 class="page-header">{{evento.event_name}}
+          <div class="btn-group">
+            <button type="button" class="btn btn-success" ng-if="evento.status=='accepted'">Accepted</button>
+            <button type="button" class="btn btn-muted" ng-if="evento.status!='accepted'" ng-click=updatePartecipationStatus('accepted')>Accepted</button>
+
+            <button type="button" class="btn btn-warning" ng-if="evento.status=='waiting'" >Waiting</button>
+            <button type="button" class="btn btn-muted" ng-if="evento.status!='waiting'" ng-click="updatePartecipationStatus('waiting')">Waiting</button>
+
+            <button type="button" class="btn btn-danger" ng-if="evento.status=='declined'">Declined</button>
+            <button type="button" class="btn btn-muted" ng-if="evento.status!='declined'" ng-click="updatePartecipationStatus('declined')">Declined</button>
+
+          </div>
+        </h2>
         <p><strong>Category: </strong>
           <span class="label label-primary tags">{{evento.category_name}}</span>
         </p>
